Moved header comment and added name to README

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 -----------------------------------------
-- Lambda Lounge Vending Machine 
+- Lambda Lounge Vending Machine
+- Created by Aditya Siram
 -----------------------------------------
 --- Contents ---
 - Overview
